<resources>
    <string name="author">Matthew Lutecki</string>
    <string name="logout">Sign out</string>
    <string name="myTeams">Teams</string>
    <string name="myProfile">Days</string>
    <string name="myEvents">Events</string>
    <string name="register_text">Don\'t have account yet? Sign up now!</string>
    <string name="login_text">Already have account? Sign in!</string>
    <string name="tos_accept">I have read and accept <b><u>terms of service</u></b></string>
    <string name="mail">E-Mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="date_from">From:</string>
    <string name="date_to">To:</string>
    <string name="date_event_from">From: %s</string>
    <string name="date_event_to">To: %s</string>
    <string name="add">Add</string>
    <string name="create_event_title">CREATE EVENT</string>
    <string name="create_free_time_title">CREATE FREE TIME</string>
    <string name="create_team">create team</string>
    <string name="join_team">join team</string>
    <string name="button_pick_start_date">start date</string>
    <string name="button_pick_end_date"> end date </string>
    <string name="event_name_hint">Event name</string>
    <string name="event_desc_hint">Event description</string>
    <string name="event_local_hint">Event place</string>
    <string name="error">Error :(</string>
    <string name="error_wrong_mail">Wrong E-mail</string>
    <string name="error_wrong_username">Wrong Username</string>
    <string name="error_wrong_noToS">Accept Terms of Service</string>
    <string name="error_empty_password">Empty Password</string>
    <string name="dialog_create_team_title">Create team</string>
    <string name="dialog_create_team_message">Enter team name below:</string>
    <string name="dialog_join_team_title">Join team</string>
    <string name="dialog_join_team_message">Enter invitation below:</string>
    <string name="dialog_leave_team_title">Leave team</string>
    <string name="dialog_leave_team_message">Are you sure you want leave this team?</string>
    <string name="add_to_local_calendar">ADD TO DEVICE CALENDAR</string>
    <string name="copied_team_invitation_to_clip">Copied team invitation to clipboard</string>

    <string name="boilerplate_resource_sample">Panta Rhei</string>
</resources>
